--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a class="navbar-brand" href="#" ></a>
               <a class="navbar nav-link" href="#">About</a>
               <a class="navbar nav-link" href="#">Contact</a>
-              <a class="navbar nav-link" href="#">Follow me</a>
+              <a class="navbar nav-link" href="login.html">Follow me</a>
             </div>
 
             <div class="text-center my-2">
