--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="navbar nav-link" href="#">Gallery</a>
               <a class="navbar-brand" href="#" ></a>
               <a class="navbar nav-link" href="#">About</a>
-              <a class="navbar nav-link" href="#">Contact</a>
+              <a class="navbar nav-link" href="#!">Contact</a>
               <a class="navbar nav-link" href="login.html">Follow me</a>
             </div>
 
